sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

var chgt1 = 0
var chgt2 = 0

do {
	for (i <- 0 to getNombreValeurs()-2) {
		chgt1 = 1
		if (getValeur(i) < getValeur(i+1)) {
			echange(i,i+1)
			chgt1 = 0
		}
	}
	for (j <- getNombreValeurs()-2 to 0 by -1) {
		chgt2 = 1
		if (getValeur(i) < getValeur(i+1)) {
			echange(i,i+1)
			chgt2 = 0			
		}
	}
} while (chgt1 == 0 || chgt2 == 0)

}
